# mybudget

./: Cargo.toml
src/: app.rs  main.rs  service.rs  types.rs
src/app/: account.rs  mod.rs  notifications.rs
src/screens/: account.rs  mod.rs  notifications.rs
src/widgets/: mod.rs  transactions.rs  utils.rs
