[package]
name = "mybudget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.29.0"
rusqlite = { version = "0.35.0", features = ["bundled", "chrono"] }
tui-input = "0.12.1"

[dev-dependencies]
rand = "0.9.1"
